[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Characters/Player/PlayerTemp.png" type="Texture" id=1]
[ext_resource path="res://Shaders/WhiteOutline.tres" type="Material" id=2]
[ext_resource path="res://Scenes/Characters/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Assets/Characters/Player/PlayerWalkTempSheet.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Weapons/Player/OrbLauncher.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 16, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "walk",
"speed": 35.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 7.62699

[sub_resource type="CircleShape2D" id=17]
radius = 5.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( 1, 0 )
z_index = 2
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 2 )
rotation = 1.5708
frames = SubResource( 2 )
animation = "idle"

[node name="OrbLauncher" parent="." instance=ExtResource( 6 )]
material = ExtResource( 2 )
position = Vector2( 6, 5 )
rotation = 1.5708
z_index = -1

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -2, 0 )
rotation = 1.5708
scale = Vector2( 0.655567, 0.649456 )
shape = SubResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.5, 1.5 )
smoothing_enabled = true
smoothing_speed = 4.0

[node name="SlimeBox" type="Area2D" parent="."]
position = Vector2( 6, -2 )

[node name="Hitbox" type="CollisionShape2D" parent="SlimeBox"]
position = Vector2( -8, 2 )
shape = SubResource( 17 )

[connection signal="area_entered" from="SlimeBox" to="." method="_on_SlimeBox_area_entered"]
[connection signal="area_exited" from="SlimeBox" to="." method="_on_SlimeBox_area_exited"]
